<resources>
    <string name="app_name">Ac00889_todoList</string>
    <string name="action_settings">Settings</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete All</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="opening">Insert title here</string>
    <string name="save">Save</string>
    <string name="warning">Do you want to clear?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="remove">remove</string>
    <string name="title_activity_edit">Edit</string>
    <string name="show">Set date</string>
    <string name="createDate">Created On: </string>
    <string name="dueDate">Date Due In For: </string>
</resources>
